--- a/android-engineer.html
+++ b/android-engineer.html
@@ -70,7 +70,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Senior Android Mobile Engineer at allego.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/mojovision/71c937e4-eeef-4bd2-93f1-343ecdb5893e'>Mojo Vision - Sr. Android Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/mojovision/71c937e4-eeef-4bd2-93f1-343ecdb5893e'>Mojo Vision - Sr. Android Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -80,7 +80,7 @@
 <p><span class="badge badge-light">Chicago, Illinois, United States</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/quizlet-2/72f84fd6-297a-4479-b20c-f52c45aebebc'>Quizlet - Android Software Engineer, Team Engagement</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/quizlet-2/72f84fd6-297a-4479-b20c-f52c45aebebc'>Quizlet - Android Software Engineer, Team Engagement</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -102,7 +102,7 @@
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/robinhood/jobs/1738108'>Job Application for Android Engineer (New Grad) at Robinhood</a></h5> 
+<h5><a href='https://boards.greenhouse.io/robinhood/jobs/1738108'>Job Application for Android Engineer (New Grad) at Robinhood</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -150,7 +150,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/frontapp/d53335a0-7a2e-43b4-acc4-dee7791376b2'>Front - Android Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/frontapp/d53335a0-7a2e-43b4-acc4-dee7791376b2'>Front - Android Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -195,7 +195,7 @@ and other continuing education. KotlinConf; DroidCon; Google I/O; Android Dev?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/houzz/3d852f7a-63a0-4d00-86f5-0e98db6fda82'>Houzz - Android Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/houzz/3d852f7a-63a0-4d00-86f5-0e98db6fda82'>Houzz - Android Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -279,7 +279,7 @@ Evangelist - Mobile Studio Manchester; Streamline Performance Tool Developer.</p
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on:: 2019-07-05</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/opentable/jobs/4316543002'>Job Application for Senior Android Engineer  at OpenTable</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/opentable/jobs/4316543002'>Job Application for Senior Android Engineer  at OpenTable</a></h5> 
 <p><span class="badge badge-light">Los Angeles Los Angeles</span></p>
 <p>Posted on: 2019-07-05</p>
 <hr/>
@@ -304,11 +304,11 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>23 hours ago ... Apply online for the job of Android/iOS Engineer at Codelitt Incubator.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gojek/763d654d-175f-4e71-b0c9-c0f4d4d2ee91'>GOJEK - Android Engineer, Transport</a></h5> 
+<h5><a href='https://jobs.lever.co/gojek/763d654d-175f-4e71-b0c9-c0f4d4d2ee91'>GOJEK - Android Engineer, Transport</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dice/jobs/4321461002'>Job Application for Senior Android Engineer at DICE</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dice/jobs/4321461002'>Job Application for Senior Android Engineer at DICE</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
@@ -340,11 +340,11 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/apartmentlist/28a59733-76eb-4496-bfef-c1595c7d3285'>Apartment List - Android Engineer - Search and Discovery</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/apartmentlist/28a59733-76eb-4496-bfef-c1595c7d3285'>Apartment List - Android Engineer - Search and Discovery</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-06-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SmaatoInc/743999690421223-senior-android-sdk-engineer-m-f-d-'>Smaato Inc. Senior Android SDK Engineer (m/f/d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SmaatoInc/743999690421223-senior-android-sdk-engineer-m-f-d-'>Smaato Inc. Senior Android SDK Engineer (m/f/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-06-28</p>
 <hr/>
@@ -392,7 +392,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-06-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/envoy/257bc561-a607-4d24-bb12-390edbd2e5f4'>Envoy - Android Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/envoy/257bc561-a607-4d24-bb12-390edbd2e5f4'>Envoy - Android Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-24</p>
 <hr/>
@@ -435,7 +435,7 @@ sushi, fried chicken, hamburgers and so on from our internet service......</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-06-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999690281358--permanent-jobs-data-scientist-mobile-engineer-ios-android-director-of-engineering-consumer-journeys-salary-200-300k'>Bey (Permanent Jobs) Data Scientist, Mobile Engineer (iOS / Android), Director of Engineering (Consumer Journeys) - Salary: 200-300K | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999690281358--permanent-jobs-data-scientist-mobile-engineer-ios-android-director-of-engineering-consumer-journeys-salary-200-300k'>Bey (Permanent Jobs) Data Scientist, Mobile Engineer (iOS / Android), Director of Engineering (Consumer Journeys) - Salary: 200-300K | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-06-21</p>
 <hr/>
@@ -443,7 +443,7 @@ sushi, fried chicken, hamburgers and so on from our internet service......</p>
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-06-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gojek/bf03ad3e-5662-4dfd-8a3a-8fbfae12fe7b'>GOJEK - Android Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/gojek/bf03ad3e-5662-4dfd-8a3a-8fbfae12fe7b'>GOJEK - Android Engineer</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-06-20</p>
 <hr/>
